--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dxepriyanka.github.io/reactcal"
+  "homepage": "https://dxepriyanka.github.io/reactcal",
   "name": "project_node",
   "version": "0.1.0",
   "private": true,
